--- a/java/design-pattern/pom.xml
+++ b/java/design-pattern/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wsmhz</groupId>
-    <artifactId>wsmhz-design-pattern</artifactId>
+    <artifactId>design-pattern</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
