--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,35 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
 
-# IntelliJ project files
+#package file
+*.war
+*.ear
+
+#kdiff3 file
+*.orig
+
+#maven file
+target/
+
+#eclipse ignore
+.settings/
+.project
+.classpath
+
+#idea
 .idea
+*.ipr
 *.iml
+*.iws
 out
 gen
+
+#temp file
+*.log
+*.cache
+*.diff
+*.patch
+*.tmp
+
+#system file
+.DS_Store
+Thmubs.db
