--- a/java/concurrency-learning/pom.xml
+++ b/java/concurrency-learning/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wsmhz</groupId>
-    <artifactId>design-pattern</artifactId>
+    <artifactId>concurrency-learning</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
